--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Quiz Application</string>
+    <string name="first_name">Firstame</string>
+    <string name="last_name">Lastname</string>
     <string name="user_name">Username</string>
 </resources>
